# dishwashmon

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deploy-to-digitalocean.sh  docker-compose.yml
.do/: app.yaml
src/: main.rs
src/api/: auth_routes.rs  device_routes.rs  mod.rs  web_routes.rs
src/api/handlers/: auth_handlers.rs
src/auth/: mod.rs  models.rs  oauth.rs
src/devices/: discovery.rs
src/storage/: mod.rs
src/views/: mod.rs
