[package]
name = "dishwashmon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Optional database integrations
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }
mongodb = { version = "2.5", optional = true }

# Optional for web API
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["cors", "trace"], optional = true }

[features]
default = []
postgres = ["sqlx"]
mongo = ["mongodb"]
web-api = ["axum", "tower", "tower-http"]
